IFS-4186 Fix ATs. Fix responsive layout issue.

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_task-list.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_task-list.scss
@@ -172,12 +172,29 @@
   .task-list {
     > li {
       .task {
+        @include media-down(tablet) {
+          width: 100%;
+        }
+
         width: 33%;
       }
 
       .notification {
-        width: 50%;
+        @include media-down(tablet) {
+          width: 100%;
+          padding-left: 0;
+        }
+
+        width: 45%;
         color: $govuk-button-colour;
+      }
+
+      .task-status {
+        @include media-down(tablet) {
+          position: static;
+          margin: 10px 0;
+          text-align: right;
+        }
       }
     }
   }
